<resources>
    <string name="app_name">Medic App client</string>
    <string name="FACEBOOK_APP_ID">2635310856541389</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">885642d56cb05ac796869652b224f780</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking">Booking</string>

    <string name="address_bullet">\u2022 Address:</string>
    <string name="time_bullet">\u2022 Time:</string>
    <string name="stylelist_bullet">\u2022 Doctor:</string>
    <string name="confirm_bullet">\u2022 Booking Status:</string>
    <string name="bullet">\u2022</string>
    <string name="thank_you_for_booking_our_services">Thank you for booking our services !</string>
    <string name="booking_information">Booking Information</string>

</resources>
